infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cbc-server
spec:
  selector:
    app: cbc-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
